Usando Tsyringe -- injeção de dependêcias
