# src/routes/specifications.routes.ts
@@ -1,11 +1,12 @@
 import { request, response, Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specicationsRoutes = Router();
 
-specicationsRoutes.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+
+// Passa o request e repsonse como um midlleaware autoamtico
+specicationsRoutes.post("/", createSpecificationController.handle);
 
 export { specicationsRoutes };
